--- a/static/css/common.css
+++ b/static/css/common.css
@@ -6,18 +6,20 @@ body {
 	background-color: rgb(240, 240, 240);
 	margin: 0;
 	margin-top: 60px;
-	width: 80% !important;
+	width: 90% !important;
 	margin-right: auto !important;
 	margin-left: auto !important;
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 25px;
 	letter-spacing: 7px;
+	font-weight: normal !important;
 }
 h2 {
 	font-size: 30px;
 	letter-spacing: 5px;
+	font-weight: bold;
 }
 h3 {
 	font-size: 20px;
@@ -35,7 +37,7 @@ h3 {
 	font-family: 微軟正黑體;
 }
 
-#header div {
+.nav {
 	float: left;
 	margin: 20px;
 	margin-top: 25px;
@@ -44,13 +46,20 @@ h3 {
 	font-size: 17px;
 }
 
-#header div:hover {
+.nav:hover {
 	text-decoration: underline;
 }
 
 .selected {
 	color: black !important;
 	text-decoration: underline;
+}
+#header-icon {
+	position: absolute;
+	right: 100px;
+	margin-top: 25px;
+	color: rgb(130, 130, 130);
+	font-size: 17px;
 }
 /********/
 #main-img {
@@ -85,9 +94,6 @@ h3 {
 
 .discription {
 	position: absolute;
-	border-color: white;
-	border-width: 2px;
-	border-style: solid;
 	color: white;
 	z-index: 1;
 	text-align: center;
@@ -105,12 +111,13 @@ h3 {
 }
 
 .shadow:hover {
-	opacity: 1;
+	opacity: 1.0;
 }
 
 .clear {
 	clear: both;
 }
+
 
 /****footer****/
 
