--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,22 +5,40 @@
 	margin-top: 30px;
 }
 
+#news_title {
+	margin-left: -10px;
+	font-size: 20px;
+	font-family: 微軟正黑體;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	color: rgb(90, 90, 90);
+}
+
 #board>a {
 	display: block;
-	border-bottom: #008080 1px dotted;
-	border-left: #008080 7px solid;
-	font-size: 20px;
 	text-decoration: none;
-	color: rgb(30, 30, 30);
-	padding: 8px;
+	font-family: 微軟正黑體;
+	font-size: 17px;
+	padding-left: 3pt;
+	padding-top: 5pt;
+	padding-bottom: 5pt;
+	width: 500px;
+	cursor: pointer;
+	color: rgb(90, 90, 90);
+
+	-webkit-transition: background 0.3s, color 0.3s; /* For Safari 3.1 to 6.0 */
+	transition: background 0.3s, color 0.3s;
 }
 
 #board>a:hover {
-	background-color: rgb(220, 220, 220);
-	border-left: gray 10px solid;
+	background: #dddddd;
+	border-radius: 5px;
+	color:black;
 }
 
-.date {
-	font-weight: bold;
-	color: #008080;
+.time {
+	margin-left: 10px;
+	padding-right: 10px;
+	color: #6baab1;
 }
+
