--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,7 @@ body{
 .huamei-wrapper
 {
 	position:absolute;
-	width:500;
+	width:500px;
 	height:200px;
 	right:0;
 	bottom:0;
@@ -57,6 +57,57 @@ body{
 }
 
 @keyframes huameislide-box{
+	0%{
+		z-index:-1;
+	}
+	50%{
+		z-index:999;
+	}
+	100%{
+		z-index:-1;
+	}
+}
+
+.huamei_k{
+	position:relative;
+	height:100%;
+	left:-100px;
+	bottom:0;
+	z-index:999;
+	animation:huameislide_k;
+	animation-duration:5s;
+	animation-fill-mode: forwards;
+}
+.huamei-wrapper_k
+{
+	position:absolute;
+	width:500px;
+	height:200px;
+	left:0;
+	bottom:0;
+	z-index:-1;
+	overflow:hidden;
+	animation:huameislide-box_k;
+	animation-duration:5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes huameislide_k{
+	0%{
+		left:-250px;
+	}
+	20%{
+		left:-50px;
+	}
+	40%{
+		left:-20px;
+	}
+	100%{
+		left:-250px;
+	}
+}
+
+@keyframes huameislide-box_k{
 	0%{
 		z-index:-1;
 	}
