--- a/static/css/common.css
+++ b/static/css/common.css
@@ -36,7 +36,12 @@ h3 {
 	padding: 0;
 	z-index: 10;
 }
-
+.header-wrapper{
+	position:relative;
+	float:right;
+	margin-top:25px;
+	right:100px;
+}
 .nav {
 	float: left;
 	margin: 20px;
