--- a/static/css/kart.css
+++ b/static/css/kart.css
@@ -26,6 +26,9 @@
 	text-decoration: underline;
 	color: rgb(60, 60, 60);
 }
+#buy-prompt a:hover {
+	color: rgb(255, 0, 150);
+}
 
 
 .buy::before {
