--- a/static/css/common.css
+++ b/static/css/common.css
@@ -9,7 +9,7 @@ body {
 	width: 90% !important;
 	margin-right: auto !important;
 	margin-left: auto !important;
-	font-family: 微軟正黑體;
+	font-family: 微軟正黑體 !important;
 }
 
 h1 {
@@ -157,5 +157,5 @@ h3 {
 
 .bold {
 	font-weight: bold;
-	font-style: italic;
+	color: black;
 }
