--- a/static/css/activity.css
+++ b/static/css/activity.css
@@ -1,7 +1,7 @@
 #container {
 	position: relative;
 	margin: 60px auto;
-	height: 4100px;
+	height: 3100px;
 	width: 1010px;
 }
 
@@ -9,7 +9,7 @@
 	position: relative;
 	float: left;
 	height: 100%;
-	width: 5px;
+	width: 7px;
 	background-color: rgb(150, 150, 150);
 	cursor: pointer;
 }
@@ -66,7 +66,7 @@
 	border-style: solid;
 	border-width: 3px;
 	position: absolute;
-	right: -10px;
+	right: -9px;
 	border-color: rgb(150, 150, 150);
 	color: rgb(150, 150, 150);
 	background-color: rgb(240, 240, 240);
@@ -98,7 +98,7 @@
 
 .poster {
 	background-color: white;
-	padding: 7px;
+	padding: 10px;
 	opacity: 0.8;
 	transition: opacity .15s ease-in;
 	border-radius: 10px;
@@ -125,15 +125,30 @@
 	width: 250px;
 	color: rgb(60, 60, 60);
 	margin: 0 10px;
+	line-height: 24px;
+}
+.disc span {
+	color: black;
+	font-weight: bold;
 }
 
 h4 {
 	font-size: 25px;
 	margin: 0;
+	margin-bottom: 18px;
 }
 h5 {
 	font-size: 20px;
 	font-weight: normal;
 	margin-top: 2px;
-	margin-bottom: 25px;
+}
+.sign {
+	position: absolute;
+	height: 7px;
+	width: 25px;
+	background-color: rgb(240, 240, 240);
+	border-color: rgb(150, 150, 150);
+	border-width: 3px;
+	border-style: solid none;
+	right: -9;
 }
